--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,54 @@
-flask-setup
-Flask-JWT-Extended
-bcrypt
-Flask
-celery
-Flask-Cors
-marshmallow
-marshmallow-sqlalchemy
-flask-marshmallow
-Flask-Migrate
-Flask-SQLAlchemy
-gunicorn
-psycopg2-binary
-python-dotenv
-requests
+alembic==1.13.1
+amqp==5.2.0
+bcrypt==4.1.2
+billiard==4.2.0
+blinker==1.7.0
+celery==5.3.6
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
+flask-marshmallow==1.2.1
+Flask-Migrate==4.0.7
+flask-setup==0.6.1
+Flask-SQLAlchemy==3.1.1
+gunicorn==21.2.0
+idna==3.6
+importlib_metadata==7.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+kombu==5.3.6
+Mako==1.3.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+marshmallow-sqlalchemy==1.0.0
+mdurl==0.1.2
+packaging==24.0
+prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
+Pygments==2.17.2
+PyJWT==2.8.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+requests==2.31.0
+rich==13.7.1
+shellingham==1.5.4
+six==1.16.0
+SQLAlchemy==2.0.29
+typer==0.12.0
+typer-cli==0.12.0
+typer-slim==0.12.0
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
+Werkzeug==3.0.2
+zipp==3.18.1
